Fixing a few FindBugs remarks.