@@ -25,12 +25,12 @@ import java.util.List;
 /**
  * This is a concrete implementation of marshal/unmarshal operations of java
  * double to cobol comp-2.
- *
+ * 
  * @author Fady Moussallam
  * 
  */
 public class CobolDoubleSimpleConverter extends CobolSimpleConverter
-implements ICobolDoubleConverter {
+        implements ICobolDoubleConverter {
 
     /**
      * @param cobolContext the Cobol compiler parameters in effect
@@ -44,7 +44,7 @@ implements ICobolDoubleConverter {
             final ICobolDoubleBinding ce,
             final byte[] hostTarget,
             final int offset)
-    throws HostException {
+            throws HostException {
         int newOffset = 0;
         try {
             newOffset = toHostSingle(ce.getDoubleValue(),
@@ -62,7 +62,7 @@ implements ICobolDoubleConverter {
             final byte[] hostTarget,
             final int offset,
             final int currentOccurs)
-    throws HostException {
+            throws HostException {
         int newOffset = offset;
         try {
             for (Double javaSource : ce.getDoubleList()) {
@@ -71,8 +71,7 @@ implements ICobolDoubleConverter {
                         newOffset);
             }
             /* If necessary, fill in the array with missing items */
-            for (int i = ce.getDoubleList().size();
-            i < currentOccurs; i++) {
+            for (int i = ce.getDoubleList().size(); i < currentOccurs; i++) {
                 newOffset = toHostSingle(Double.valueOf(0),
                         hostTarget,
                         newOffset);
@@ -88,7 +87,7 @@ implements ICobolDoubleConverter {
             final ICobolDoubleBinding ce,
             final byte[] hostSource,
             final int offset)
-    throws HostException {
+            throws HostException {
         int newOffset = offset;
         try {
             Double javaDouble = fromHostSingle(ce.getByteLength(),
@@ -108,7 +107,7 @@ implements ICobolDoubleConverter {
             final byte[] hostSource,
             final int offset,
             final int currentOccurs)
-    throws HostException {
+            throws HostException {
         List < Double > lArray = new ArrayList < Double >();
         int newOffset = offset;
         try {
@@ -127,7 +126,7 @@ implements ICobolDoubleConverter {
     }
 
     /**
-     *  Converts a Java Double to a host comp-2.
+     * Converts a Java Double to a host comp-2.
      * 
      * @param javaDouble java double to convert
      * @param hostTarget target host buffer
@@ -139,7 +138,7 @@ implements ICobolDoubleConverter {
             final Double javaDouble,
             final byte[] hostTarget,
             final int offset)
-    throws CobolConversionException {
+            throws CobolConversionException {
 
         /* Comp-2 are 8 byte long */
         int cobolByteLength = 8;
@@ -158,7 +157,7 @@ implements ICobolDoubleConverter {
             localDouble = 0d;
         }
 
-        /* Host doubles do not support NaN or infinite.     */
+        /* Host doubles do not support NaN or infinite. */
         if (localDouble.isInfinite()) {
             throw (new CobolConversionException(
                     "Infinite doubles are not supported",
@@ -170,8 +169,10 @@ implements ICobolDoubleConverter {
                     new HostData(hostTarget), offset));
         }
 
-        /* Treat the zero case separatly because the bit layout is not
-         *  consistent.     */
+        /*
+         * Treat the zero case separatly because the bit layout is not
+         * consistent.
+         */
         if ((localDouble.doubleValue() == 0.0f)
                 ||
                 (localDouble.doubleValue() == -0.0f)) {
@@ -188,12 +189,14 @@ implements ICobolDoubleConverter {
         HostDouble hF = new HostDouble();
         hF.setSign(jF.getSign());
 
-        /* The java exponent is a binary offset while the host exponent is an
+        /*
+         * The java exponent is a binary offset while the host exponent is an
          * hexadecimal offset. This means host exponent values are multiple
-         * or 4. If the java exponent is not a multiple of 4 we then need 
-         * to shift the mantissa which might result in loss of precision. */
+         * or 4. If the java exponent is not a multiple of 4 we then need
+         * to shift the mantissa which might result in loss of precision.
+         */
         int r = jF.getExponent() % 4;
-        int mantissaShift = 0; 
+        int mantissaShift = 0;
         if (r <= 0) {
             mantissaShift = -1 * r;
         } else {
@@ -203,10 +206,12 @@ implements ICobolDoubleConverter {
         hF.setExponent((jF.getExponent() + mantissaShift) / 4);
         hF.setMantissa(jF.getMantissa() >> mantissaShift);
 
-        /* The host double mantissa is stored on 56 bits while java is on 53
+        /*
+         * The host double mantissa is stored on 56 bits while java is on 53
          * (52 + 1 plus).
          * bits so we need to padd the java mantissa with an additional 3 bits
-         * to the right */
+         * to the right
+         */
         hF.setMantissa(hF.getMantissa() << 3);
 
         /* Now assemble the host double 8 bytes */
@@ -215,13 +220,14 @@ implements ICobolDoubleConverter {
         /* Store the bytes in the host buffer */
         for (int i = 0; i < 8; i++) {
             hostTarget[offset + i] =
-                (byte) ((hostLongBits >>> (56 - i * 8)) & 0xff);
+                    (byte) ((hostLongBits >>> (56 - i * 8)) & 0xff);
         }
 
         return offset + cobolByteLength;
     }
 
-    /** Converts a host comp-2 to a Java Double.
+    /**
+     * Converts a host comp-2 to a Java Double.
      * 
      * @param cobolByteLength host byte length
      * @param hostSource source host buffer
@@ -233,22 +239,24 @@ implements ICobolDoubleConverter {
             final int cobolByteLength,
             final byte[] hostSource,
             final int offset)
-    throws CobolConversionException {
+            throws CobolConversionException {
 
         int lastOffset = offset + cobolByteLength;
 
-        /* Check that we are still within the host source range.
+        /*
+         * Check that we are still within the host source range.
          * If not, consider the host optimized its payload by truncating
-         * trailing nulls in which case, we just need to initialize and return. */
+         * trailing nulls in which case, we just need to initialize and return.
+         */
         if (lastOffset > hostSource.length) {
-            return new Double(0);
+            return Double.valueOf(0d);
         }
 
         /* Create a host double representation from the bytes we have */
         long hostLongBits = 0;
         for (int i = 0; i < 8; i++) {
             hostLongBits = hostLongBits
-            | ((long) (hostSource[offset + (7 - i)] & 0xff) << (i * 8));
+                    | ((long) (hostSource[offset + (7 - i)] & 0xff) << (i * 8));
         }
         HostDouble hF = parseHostDouble(hostLongBits);
 
@@ -256,15 +264,19 @@ implements ICobolDoubleConverter {
         HostDouble jF = new HostDouble();
         jF.setSign(hF.getSign());
 
-        /* Host exponent is hexadecimal based while java is binary based.
+        /*
+         * Host exponent is hexadecimal based while java is binary based.
          * There is also an additional shift for non-zero values due to
-         * the 1-plus" normalized java specs.  */
+         * the 1-plus" normalized java specs.
+         */
         if (hF.getMantissa() != 0) {
             jF.setExponent((4 * hF.getExponent()) - 1);
         }
 
-        /* The java mantissa is 53 bits while the host is 56. This
-         * means there is a systematic loss of precision. */
+        /*
+         * The java mantissa is 53 bits while the host is 56. This
+         * means there is a systematic loss of precision.
+         */
         jF.setMantissa(hF.getMantissa() >>> 3);
 
         /* In java the 53th bit needs to be one */
@@ -298,18 +310,22 @@ implements ICobolDoubleConverter {
         /* First bit left (bit 63) is the sign: 0 = positive, 1 = negative */
         jF.setSign((int) ((javaLongBits & 0x8000000000000000L) >>> 63));
 
-        /* Bits 62-52  (11 bits) represents the exponent offset by 1023, this
+        /*
+         * Bits 62-52 (11 bits) represents the exponent offset by 1023, this
          * number is called excess so you get the exponent as E= excess - 1023
          * Furthermore, the "1-plus" normalized representation has the decimal
          * point after the implicit initial 1. Here we elect to store the
-         * exponent for decimal point before that initial 1.*/
+         * exponent for decimal point before that initial 1.
+         */
         int excess = (int) ((javaLongBits >> 52) & 0x7ffL);
         jF.setExponent(excess - 1023 + 1);
 
-        /* Bits 51-0 (52 bits) represents the mantissa in a form called
+        /*
+         * Bits 51-0 (52 bits) represents the mantissa in a form called
          * "1-plus" normalized. This means that the real mantissa is actually
          * 1.b(51)b(50)...b(0) where the intiial "1" is implicit.
-         * This code will explicitly add 1 in front of the mantissa. */
+         * This code will explicitly add 1 in front of the mantissa.
+         */
         long orMask = 1L << 52;
         jF.setMantissa(javaLongBits & 0x000fffffffffffffL | orMask);
 
@@ -317,8 +333,8 @@ implements ICobolDoubleConverter {
     }
 
     /**
-     *  Reconstruct a java double from its sign, exponent and mantissa
-     *  components.
+     * Reconstruct a java double from its sign, exponent and mantissa
+     * components.
      * 
      * @param jF a class holding the various components
      * @return a Java double
@@ -337,7 +353,7 @@ implements ICobolDoubleConverter {
         return Double.longBitsToDouble(javaLongBits);
     }
 
-    /** 
+    /**
      * Extracts the sign, exponent and mantissa from a Host double .
      * 
      * @param hostLongBits the bit sequence representing the host double
@@ -349,9 +365,11 @@ implements ICobolDoubleConverter {
         /* First bit left (bit 63) is the sign: 0 = positive, 1 = negative */
         hF.setSign((int) ((hostLongBits & 0x8000000000000000L) >>> 63));
 
-        /* Bits 62-56 (7 bits) represents the exponent offset by 64, this
+        /*
+         * Bits 62-56 (7 bits) represents the exponent offset by 64, this
          * number is called excess so you get the exponent as
-         * E= excess - 64 */
+         * E= excess - 64
+         */
         int excess = (int) ((hostLongBits & 0x7f00000000000000L) >>> 56);
         if (excess != 0) {
             hF.setExponent((excess - 64));
@@ -363,7 +381,7 @@ implements ICobolDoubleConverter {
         return hF;
     }
 
-    /** 
+    /**
      * Reconstruct a host double from its sign, exponent and mantissa
      * components.
      * 
